bar chart group index

--- a/analysis/templates/html/unused/stacked-barchart.html
+++ b/analysis/templates/html/unused/stacked-barchart.html
@@ -36,7 +36,7 @@
 <script src="../d3.v3.min.js"></script>
 <script src="stacked-barchart.js"></script>
 <script>
-    var rawData = /*data_placeholder*/"\
+    var rawData = /*data_placeholder*/["\
 date,category,value\n\
 18/01/2013,Mee,18\n\
 19/01/2013,Mee,5\n\
@@ -53,7 +53,7 @@ date,category,value\n\
 20/01/2013,GGG,11\n\
 21/01/2013,GGG,11\n\
 22/01/2013,GGG,11\n\
-"/*data_placeholder*/;
+"]/*data_placeholder*/;
     var margin = {top: 40, right: 50, bottom: 20, left: 50};
     var uiConfig = {
         width: 960 - margin.left - margin.right,
